blocks/aside/aside.css
/* CSS for Aside block */
.aside .share {
  background-color: #f2f2f2;
  padding: 20px;
  max-width: 302px;
}

.aside .share h4 {
  margin: unset;
}

.aside .social {
  display: flex;
  flex-flow: row wrap;
  column-gap: 10px;
  padding-top: 8px;
}

.aside .social span {
  height: 40px;
  width: 40px;
}

.aside a.pdf-button {
  width: 100%;
  height: 40px;
  margin-top: 33px;
  line-height: 40px;
  background-color: #000;
  color: #fff;
  font-family: var(--graphik-semibold);
  font-size: 14px;
  font-weight: 600;
  text-align: center;
  box-shadow: 4px 4px 1px 0 #a7a7a7;
  display: block;
  max-width: 226px;
  margin-right: 50px;
  text-transform: uppercase;
}

.aside .tags {
  font-family: var(--graphik-semibold);
  font-weight: 600;
  color: var(--text-color);
  max-width: 302px;
}

.aside .tags h4 {
  font-size: var(--body-font-size-s);
  line-height: 1.39;
  text-transform: uppercase;
}

.aside .tags ul {
  display: flex;
  flex-flow: row wrap;
}

.aside .tags ul,
.aside .tags li {
  list-style: none;
  padding-left: unset;
}

.aside .tags li:not(:last-of-type)::after {
  content: "\25CF";
  font-size: 14px;
  font-weight: 200;
  padding: 0 10px;
}

.aside .tags a {
  color: var(--text-color);
  font-size: 12px;
  padding-bottom: 5px;
  border-bottom: 2px solid #004dff;
  line-height: 35px;
}

